# lipstick

./: README.md  pyproject.toml  setup.py
examples/: Untitled.ipynb  animations.ipynb  bar_plots.ipynb
lipstick/: __init__.py  animations.py  bar_plots.py  scatter_diag.py  scatter_hist.py  scatter_plots.py
src/lipstick/: __init__.py  animations.py  grid.py  scatter_plots.py
